updated GUI but still uses .txt database